--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -1,3 +1,7 @@
 /* .app {
   background-color: #151828;
 } */
+
+.content {
+  background-color: #151828;
+}
